--- a/README.rdoc
+++ b/README.rdoc
@@ -1,16 +1,55 @@
 = timekeeper
 
-Description goes here.
+== Keeping track of your time
+
+Timekeeper is yet another attempt to "timesheets made easy".
+
+=== Dependencies
+
+* Tokyo Cabinet (http://1978th.net/tokyocabinet/)
+* Rufus Tokyo (http://github.com/jmettraux/rufus-tokyo)
+
+=== Install
+
+    sudo gem install timekeeper
+	
+=== Configure
+
+Create a yml file 'timekeeper.yml' containing:
+
+    db_path: . # the place where you want to store your tokyo cabinet files
+    name: koen # your name, a file called 'koen-time.tct' will be created
+		team: [koen, tom] # your team-members # everyone will get his own '*-time.tct' file
+		
+=== Usage
+
+Create a new entry
+
+    tk -t title -c target -s timespend -m 'more info' -d yesterday
+
+More
+	
+    tk --help
+
+View stored entries
+
+    tv --month 9 --csv
+
+More
+
+    tv --help
+
+=== TODO
+
+A lot. But first of all, more query options
+		
 
 == Note on Patches/Pull Requests
  
 * Fork the project.
 * Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
-* Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but
-   bump version in a commit by itself I can ignore when I pull)
+* Add tests for it. This is important so I don't break it in a future version unintentionally.
+* Commit, do not mess with rakefile, version, or history. (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
 == Copyright
